--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
    rel="stylesheet">
   <link href="styles/all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
-  <title>Héber Leonard</title>
+  <title>Rahul Arepaka</title>
+  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;font-size:30vx"">MIT License Copyright (c) 2021 Rahul Arepaka</p>
+
 </head>
 <body>
   <div class="container">
@@ -18,13 +20,17 @@
       <div class="button green"></div>
     </div>
     <div class="title">
-      <a href="https://github.com/heberleonard2" target="_blank"><h1><i class='fab fa-github'></i> github.com/heber-leonard</h1></a>
+      <a href="https://github.com/rahularepaka" target="_blank"><h1><i class='fab fa-github'></i> github.com/rahularepaka</h1></a>
     </div>
+    
+    
     </div>
     <div id="app">
     </div>
   </div>
 
   <script src="scripts/main.js"></script>  
+
 </body>
+
 </html>
