--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="styles/all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <title>Rahul Arepaka</title>
-  <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;font-size:30vx"">MIT License Copyright (c) 2021 Rahul Arepaka</p>
+  <!--<p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;font-size:30vx"">MIT License Copyright (c) 2021 Rahul Arepaka</p>-->
 
 </head>
 <body>
@@ -20,6 +20,7 @@
       <div class="button green"></div>
     </div>
     <div class="title">
+
       <a href="https://github.com/rahularepaka" target="_blank"><h1><i class='fab fa-github'></i> github.com/rahularepaka</h1></a>
     </div>
     
