--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap"
    rel="stylesheet">
   <link href="styles/all.css" rel="stylesheet">
+  <link rel="icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles/main.css">
   <title>Rahul Arepaka</title>
   
